--- a/app/globals.css
+++ b/app/globals.css
@@ -222,6 +222,15 @@
   *::-webkit-scrollbar {
     display: none; /* WebKit browsers (Chrome, Safari, Edge) */
   }
+  
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+  }
+  
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none; /* WebKit browsers (Chrome, Safari, Edge) */
+  }
 }
 
 
